Revision history for Perl module JSON::Repair

0.04 2016-11-26

- Escape unprintable and whitespace characters in strings

0.03 2016-11-23

- Documentation

0.02 2016-11-20

- Remove hash comments like # this
- Fix numbers as well
- Use new "check" method of JSON::Parse

0.01 2016-11-20

- Initial version
