@@ -17,6 +17,10 @@ my $repaired = repair_json ("{'fantastic':\"pump\",", verbose => undef);
 like ($repaired, qr/"fantastic"/, "Converted single to double quotes");
 unlike ($repaired, qr/,/, "Removed trailing comma");
 like ($repaired, qr/\}$/, "Added }");
+my $repaired2 = repair_json ("['fantastic']");
+like ($repaired2, qr/"fantastic"/, "repaired single quote string in array");
+my $repaired_quote = repair_json ("['fantastic\"']");
+like ($repaired_quote, qr/\\""/, "repaired double quote in single quotes");
 my $repaired_array = repair_json ('[1,2,3,');
 like ($repaired_array, qr/]\s*$/, "Added ] to array");
 unlike ($repaired_array, qr/,\s*]\s*$/, "Removed trailing comma from array");
